derive_tests/tests/compile_fail/missing_function.stderr
error: proc-macro derive panicked
 --> tests/compile_fail/missing_function.rs:3:10
  |
3 | #[derive(Validate)]
  |          ^^^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: Error("unexpected token in nested attribute, expected ident")
